examples/python/bad/srp.py
class DataSaver:

    def read(self):
        print("read data...")

    def parse(self):
        print("parsing data...")

    def save(self):
        print("save data...")


saver = DataSaver()
saver.read()
saver.parse()
saver.save()